--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/mustache": "^4.2.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "htmlparser2": "^9.1.0",
-    "zustand": "^4.5.1"
+    "htmx.org": "^1.9.12",
+    "mustache": "^4.2.0"
   }
 }
