--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "htmx.org": "^1.9.12",
+    "cash-dom": "^8.1.5",
     "mustache": "^4.2.0"
   }
 }
