--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "cash-dom": "^8.1.5",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "twind": "^0.16.19"
   }
 }
