--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "goober": "^2.1.14",
-    "mustache": "^4.2.0"
+    "mustache": "^4.2.0",
+    "twind": "^0.16.19"
   }
 }
