--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "monaco-editor": "0.50.0",
-    "mustache": "^4.2.0",
-    "twind": "^0.16.19"
+    "goober": "^2.1.14",
+    "monaco-editor": "0.50.0"
   }
 }
