--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "advect",
-  "private": false,
-  "version": "0.1.0",
+  "module": "index.ts",
   "type": "module",
-  "author": {
-    "name": "PartyGodTroy",
-    "email": ""
-  },
-  "license": "MIT",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc  && vite build",
-    "preview": "vite preview"
-  },
   "devDependencies": {
-    "@types/mustache": "^4.2.5",
-    "typescript": "^5.4.5",
-    "vite": "^5.1.4"
+    "@types/bun": "latest"
+  },
+  "scripts": {
+    "build": "bun bun.build.ts",
+    "dev": "bun run bun.build.ts && bun --watch run bun.run.ts"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   },
   "dependencies": {
-    "goober": "^2.1.14",
-    "monaco-editor": "0.50.0"
+    "comlink": "^4.4.1",
+    "handlebars": "^4.7.8",
+    "install": "^0.13.0",
+    "twind": "^0.16.19"
   }
 }
