--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/reactivity": "^3.4.31",
     "monaco-editor": "0.50.0",
     "mustache": "^4.2.0",
+    "snarkdown": "^2.0.0",
     "twind": "^0.16.19"
   }
 }
