--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
-    "@vue/reactivity": "^3.4.31",
-    "monaco-editor": "0.50.0",
-    "mustache": "^4.2.0",
+    "ejs": "^3.1.10",
     "snarkdown": "^2.0.0",
-    "twind": "^0.16.19"
+    "squirrelly": "^9.1.0",
+    "twind": "^0.16.19",
+    "zustand": "^4.5.4"
   }
 }
