--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "typeRoots": ["./src/typings"],
   },
   "include": ["src", "src/*.ts"]
 }
