--- a/advect.io/.env.example
+++ b/advect.io/.env.example
@@ -2,8 +2,9 @@ TZ=UTC
 PORT=3333
 HOST=localhost
 LOG_LEVEL=info
-APP_KEY=zppGRMidxKQFF7HbsSdxM98O89YWD5oL
+APP_KEY=uyphWNFpJoWkZijfzrAPORgoLHSeqrEp
 NODE_ENV=development
+SESSION_DRIVER=cookie
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_USER=postgres
