--- a/advect.io/package.json
+++ b/advect.io/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "license": "MIT",
+  "license": "UNLICENSED",
   "scripts": {
     "start": "node bin/server.js",
     "build": "node ace build",
@@ -11,7 +11,9 @@
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:clean": "node ace migration:fresh --seed",
+    "db:run": "node ace migration:run"
   },
   "imports": {
     "#controllers/*": "./app/controllers/*.js",
@@ -27,34 +29,38 @@
     "#policies/*": "./app/policies/*.js",
     "#abilities/*": "./app/abilities/*.js",
     "#database/*": "./database/*.js",
-    "#start/*": "./start/*.js",
     "#tests/*": "./tests/*.js",
+    "#start/*": "./start/*.js",
     "#config/*": "./config/*.js"
   },
   "devDependencies": {
-    "@adonisjs/assembler": "^7.7.0",
-    "@adonisjs/eslint-config": "^1.3.0",
-    "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/tsconfig": "^1.3.0",
+    "@adonisjs/assembler": "^7.8.1",
+    "@adonisjs/eslint-config": "^2.0.0-beta.6",
+    "@adonisjs/prettier-config": "^1.4.0",
+    "@adonisjs/tsconfig": "^1.4.0",
     "@japa/api-client": "^2.0.3",
     "@japa/assert": "^3.0.0",
     "@japa/plugin-adonisjs": "^3.0.1",
     "@japa/runner": "^3.1.4",
-    "@swc/core": "^1.7.6",
+    "@swc/core": "^1.7.22",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.1.0",
-    "eslint": "^8.57.0",
+    "@types/node": "^22.5.1",
+    "eslint": "^9.9.1",
     "hot-hook": "^0.2.6",
     "pino-pretty": "^11.2.2",
     "prettier": "^3.3.3",
-    "ts-node": "^10.9.2",
-    "typescript": "~5.5"
+    "ts-node-maintained": "^10.9.4",
+    "typescript": "~5.5",
+    "vite": "^5.4.2"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
     "@adonisjs/core": "^6.12.1",
-    "@adonisjs/cors": "^2.2.1",
-    "@adonisjs/lucid": "^21.1.1",
+    "@adonisjs/lucid": "^21.2.0",
+    "@adonisjs/session": "^7.4.2",
+    "@adonisjs/shield": "^8.1.1",
+    "@adonisjs/static": "^1.1.1",
+    "@adonisjs/vite": "^3.0.0",
     "@vinejs/vine": "^2.1.0",
     "edge.js": "^6.0.2",
     "luxon": "^3.5.0",
@@ -77,9 +83,6 @@
     "overrides": {
       "strtok3": "8.0.1"
     }
-  },
-  "eslintConfig": {
-    "extends": "@adonisjs/eslint-config/app"
   },
   "prettier": "@adonisjs/prettier-config"
 }
