actually update the version

--- a/project/tsconfig.json
+++ b/project/tsconfig.json
@@ -12,7 +12,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-
+    "paths": {
+      "@/*": [
+        "./*"
+      ]
+    },
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
