--- a/advect.org/package.json
+++ b/advect.org/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@directus/sdk": "^17.0.1",
+    "@elysiajs/cors": "^1.1.1",
     "@elysiajs/html": "^1.1.1",
     "edge.js": "^6.0.2",
     "editorjs-html": "^3.4.3",
