--- a/advect.org/package.json
+++ b/advect.org/package.json
@@ -9,7 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@advect/advect": "^2.0.7",
+    "@advect/advect": "2.0.7",
     "astro": "^5.1.7"
   }
 }
